[gd_scene load_steps=6 format=3 uid="uid://dedqk11nyieue"]

[ext_resource type="FontFile" uid="uid://c5p6grn1488p6" path="res://fonts/ttf/JetBrainsMono-Regular.ttf" id="1_ciwkk"]
[ext_resource type="CodeHighlighter" uid="uid://b20i61dre0au2" path="res://basic_code_highlight.tres" id="2_ndvr8"]
[ext_resource type="Script" uid="uid://bs4js6n3icybt" path="res://src/main/gd/scripts/code_edit.gd" id="3_alg10"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfwaa"]
bg_color = Color(0.05, 0.05, 0.05, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hwsmu"]
content_margin_left = 10.0
content_margin_right = 10.0
bg_color = Color(0.2, 0.2, 0.2, 1)

[node name="Script" type="CodeEdit"]
theme_override_colors/current_line_color = Color(0.1, 0.1, 0.1, 1)
theme_override_fonts/font = ExtResource("1_ciwkk")
theme_override_styles/normal = SubResource("StyleBoxFlat_tfwaa")
theme_override_colors/executing_line_color = Color(1, 0, 0, 1)
indent_wrapped_lines = true
scroll_smooth = true
minimap_draw = true
minimap_width = 120
caret_blink = true
caret_mid_grapheme = true
syntax_highlighter = ExtResource("2_ndvr8")
highlight_all_occurrences = true
highlight_current_line = true
symbol_lookup_on_click = true
symbol_tooltip_on_hover = true
line_folding = true
gutters_draw_breakpoints_gutter = true
gutters_draw_bookmarks = true
gutters_draw_executing_lines = true
gutters_draw_line_numbers = true
gutters_draw_fold_gutter = true
code_completion_enabled = true
indent_use_spaces = true
indent_automatic = true
auto_brace_completion_enabled = true
auto_brace_completion_highlight_matching = true
script = ExtResource("3_alg10")
metadata/_tab_index = 0

[node name="Highlighter" type="Node" parent="."]

[node name="TypePopup" type="Label" parent="."]
unique_name_in_owner = true
visible = false
top_level = true
offset_left = 10.0
offset_right = 83.0
offset_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 6
theme_override_styles/normal = SubResource("StyleBoxFlat_hwsmu")
text = "unknown"
vertical_alignment = 1

[connection signal="breakpoint_toggled" from="." to="." method="_on_breakpoint_toggled"]
[connection signal="caret_changed" from="." to="." method="_on_caret_changed"]
[connection signal="code_completion_requested" from="." to="." method="_on_code_completion_requested"]
[connection signal="symbol_hovered" from="." to="." method="_on_symbol_hovered"]
[connection signal="symbol_lookup" from="." to="." method="_on_symbol_lookup"]
[connection signal="symbol_validate" from="." to="." method="_on_symbol_validate"]
